--- a/style.css
+++ b/style.css
@@ -106,3 +106,31 @@ header {
     padding-left: 5px;
 
 }
+section a{
+    text-decoration: none;
+}
+.cate-row {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+    text-align: center;
+    width: 100%;
+    height: auto;
+
+
+}
+
+.cate-col {
+    padding: 10px, 0px;
+    cursor: pointer;
+
+}
+
+.cate-col img {
+    width: 70px;
+    height: 70px;
+}
+
+.cate-col h5:hover {
+    color: #2874f0;
+}
